Added authors and license files to manifest template. Closes GH-98.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,5 @@ recursive-exclude virtualenv_support *.py
 recursive-exclude docs/_templates *.*
 include virtualenv_support/__init__.py
 include *.py
+include AUTHORS.txt
+include LICENSE.txt
