--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
+recursive-include bin *
 recursive-include docs *.txt
 recursive-include scripts *
 recursive-include virtualenv_support *.egg *.tar.gz
