--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 # Another integration test, where we must download
   - cp -t bin virtualenv.py; coverage run bin/virtualenv.py --distribute ./test-venv-02
 # How was our test coverage?
-  - coverage report
+  - coverage report --show-missing
 notifications:
   irc:
     channels: "irc.freenode.org#pip"
