--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ script:
   - coverage run virtualenv.py --distribute ./test-venv-01
 # Another integration test, where we must download
   - cp -t bin virtualenv.py; coverage run bin/virtualenv.py --distribute ./test-venv-02
+# Also test with setuptools if we are on Python 2
+  - python -c 'import sys; sys.exit(0 if sys.version_info >= (3,) else 1)' || coverage run virtualenv.py --setuptools ./test-venv-03
+# Setuptools + download
+  - python -c 'import sys; sys.exit(0 if sys.version_info >= (3,) else 1)' || coverage run bin/virtualenv.py --setuptools ./test-venv-04
 # How was our test coverage?
   - coverage report --show-missing
 notifications:
