--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,15 @@ install:
 script:
   - coverage erase
 # Unit tests
-  - coverage run setup.py test
+  - coverage run -a setup.py test
 # Integration test
-  - coverage run virtualenv.py --distribute ./test-venv-01
+  - coverage run -a virtualenv.py --distribute ./test-venv-01
 # Another integration test, where we must download
-  - cp -t bin virtualenv.py; coverage run bin/virtualenv.py --distribute ./test-venv-02
+  - cp -t bin virtualenv.py; coverage run -a bin/virtualenv.py --distribute ./test-venv-02
 # Also test with setuptools if we are on Python 2
-  - python -c 'import sys; sys.exit(0 if sys.version_info >= (3,) else 1)' || coverage run virtualenv.py --setuptools ./test-venv-03
+  - python -c 'import sys; sys.exit(0 if sys.version_info >= (3,) else 1)' || coverage run -a virtualenv.py --setuptools ./test-venv-03
 # Setuptools + download
-  - python -c 'import sys; sys.exit(0 if sys.version_info >= (3,) else 1)' || coverage run bin/virtualenv.py --setuptools ./test-venv-04
+  - python -c 'import sys; sys.exit(0 if sys.version_info >= (3,) else 1)' || coverage run -a bin/virtualenv.py --setuptools ./test-venv-04
 # How was our test coverage?
   - coverage report --show-missing
 notifications:
