--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
 [testenv]
 deps =
     nose
+    mock
 commands =
-    python setup.py test
+    nosetests -v tests
     python virtualenv.py {envtmpdir}/test-venv-01
