Change nose to pytest, clean up setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,7 @@ envlist =
 
 [testenv]
 deps =
-    nose
+    pytest
     mock
 commands =
-    nosetests -v tests
-    python virtualenv.py {envtmpdir}/test-venv-01
+    py.test []
