--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26,py27,py32,py33,pypy
+    docs,py26,py27,py32,py33,pypy
 
 [testenv]
 deps =
@@ -8,3 +8,9 @@ deps =
     mock
 commands =
     py.test []
+
+[testenv:docs]
+deps = sphinx
+basepython = python2.7
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
