switch to py.test

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@ envlist =
 
 [testenv]
 deps =
-    nose
     mock
+    pytest
 commands =
-    nosetests -v tests
+    py.test []
     python virtualenv.py {envtmpdir}/test-venv-01
