--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26,py27,py32,py33,py34,pypy
+    py26,py27,py32,py33,py34,pypy,docs
 
 [testenv]
 deps =
@@ -9,3 +9,9 @@ deps =
 commands =
     py.test []
     python virtualenv.py {envtmpdir}/test-venv-01
+
+[testenv:docs]
+deps = sphinx
+basepython = python2.7
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
