--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,35 @@
 [tox]
 envlist =
-    py26,py27,py32,py33,py34,pypy,pypy3,docs
+    check,
+    py26,py27,py32,py33,py34,
+    pypy,pypy3,
+    docs
 
 [testenv]
 deps =
     mock
     pytest
+    scripttest
 commands =
-    py.test []
-    python virtualenv.py {envtmpdir}/test-venv-01
+    {posargs:py.test tests}
 
 [testenv:docs]
 deps = sphinx
 basepython = python2.7
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
+
+[testenv:check]
+basepython = python3.4
+deps =
+    docutils
+    check-manifest
+    flake8
+    collective.checkdocs
+    pygments
+usedevelop = true
+commands =
+    python setup.py checkdocs
+    python setup.py check --strict --metadata
+    check-manifest {toxinidir}
+    flake8 src
