--- a/tox.ini
+++ b/tox.ini
@@ -1,35 +1,48 @@
 [tox]
-envlist =
-    check,
-    py26,py27,py32,py33,py34,
-    pypy,pypy3,
-    docs
+envlist = py26,py27,pypy,py32,py33,py34,docs,pep8,py2pep8
 
 [testenv]
 deps =
-    mock
+    coverage
+    pretend
     pytest
     scripttest
 commands =
-    {posargs:py.test tests}
+    coverage run -m pytest --strict {posargs}
+    coverage report -m
+
+[testenv:pypy]
+commands =
+    py.test --strict {posargs}
 
 [testenv:docs]
-deps = sphinx
-basepython = python2.7
+deps =
+    sphinx
+    sphinx_rtd_theme
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -W -b latex -d {envtmpdir}/doctrees docs docs/_build/latex
+    sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
 
-[testenv:check]
-basepython = python3.4
+[testenv:pep8]
+basepython = python3.2
 deps =
-    docutils
-    check-manifest
     flake8
-    collective.checkdocs
-    pygments
-usedevelop = true
+    pep8-naming
+commands = flake8 .
+
+[testenv:py2pep8]
+basepython = python2.6
+deps =
+    flake8
+    pep8-naming
+commands = flake8 .
+
+[testenv:packaging]
+deps = check-manifest
 commands =
-    python setup.py checkdocs
-    python setup.py check --strict --metadata
-    check-manifest {toxinidir}
-    flake8 src
+    check-manifest
+
+[flake8]
+exclude = .tox,*.egg
+select = E,W,F,N
