--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,8 @@
-recursive-include bin *
-recursive-include docs *
-recursive-include scripts *
-recursive-include virtualenv_support *.whl
-recursive-include virtualenv_embedded *
-recursive-exclude docs/_templates *
-recursive-exclude docs/_build *
-include virtualenv_support/__init__.py
-include *.py
 include AUTHORS.txt
+include CONTRIBUTING.rst
 include LICENSE.txt
+
+include tox.ini
+
+recursive-include docs Makefile make.bat *.py *.rst
+recursive-include tests *.py
