Fix up ignores and add a coveragerc

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-virtualenv.egg-info
-build
-dist
-docs/_build
-.DS_Store
-*.pyc
-mock-*.egg
-nose-*.egg
-.tox
-tests/test_activate_actual.output
+*.egg-info/
+*.egg
+*.py[co]
+
+.tox/
+.cache/
+.coverage
+
+__pycache__/
+_build/
+build/
+dist/
+htmlcov/
