--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = py26,py27,pypy,py32,py33,py34,docs,pep8,py2pep8
 [testenv]
 deps =
     coverage
+    pretend
     pytest
 commands =
     coverage run -m pytest --strict {posargs}
