--- a/tox.ini
+++ b/tox.ini
@@ -20,8 +20,8 @@ deps =
     sphinx_rtd_theme
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
-    sphinx-build -W -b latex -d {envtmpdir}/doctrees docs docs/_build/latex
-    sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -W -b man -d {envtmpdir}/doctrees docs docs/_build/man
+    sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/doctest
 
 [testenv:pep8]
 basepython = python3.2
