Update test settings somewhat. Use pytest-cov plugin for coverage measurement.

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,30 @@
 [tox]
 envlist = py26,py27,pypy,py32,py33,py34,pypy3,docs,pep8,py2pep8,packaging
 
+[pytest]
+norecursedirs =
+    .git
+    .tox
+    dist
+    build
+addopts =
+    -rxEfs
+    --strict
+    --ignore docs/conf.py
+    --ignore setup.py
+
 [testenv]
 deps =
-    coverage
     pretend
+    scripttest
     pytest
+    pytest-cov
 commands =
-    coverage run -m pytest --strict {posargs}
-    coverage report -m
+    py.test --cov=virtualenv --cov-report=term-missing {posargs:tests}
 
 [testenv:pypy]
 commands =
-    py.test --strict {posargs}
+    py.test {posargs:tests}
 
 [testenv:docs]
 deps =
