--- a/tox.ini
+++ b/tox.ini
@@ -45,3 +45,9 @@ commands =
 [flake8]
 exclude = .tox,*.egg
 select = E,W,F,N
+
+[pytest]
+addopts = -r s
+markers =
+    unit: this test is a fast running unit test
+    functional: this test is a possibly slow running functional test
