Disable coverage for travis. For now ....

--- a/tox.ini
+++ b/tox.ini
@@ -20,11 +20,11 @@ deps =
     pytest
     pytest-cov
 commands =
-    py.test --cov=virtualenv --cov-report=term-missing {posargs:tests}
+    {posargs:py.test --cov=virtualenv --cov-report=term-missing tests}
 
 [testenv:pypy]
 commands =
-    py.test {posargs:tests}
+    {posargs:py.test tests}
 
 [testenv:docs]
 deps =
