Add the missing environments

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ env:
   - TOXENV=pypy
   - TOXENV=pypy3
   - TOXENV=docs
+  - TOXENV=pep8
+  - TOXENV=py2pep8
+  - TOXENV=packaging
 
 install: pip install tox
 
