--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,pypy,py32,py33,py34,docs,pep8,py2pep8
+envlist = py26,py27,pypy,py32,py33,py34,pypy3,docs,pep8,py2pep8,packaging
 
 [testenv]
 deps =
