--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,8 @@ include AUTHORS.txt
 include CONTRIBUTING.rst
 include LICENSE.txt
 
+include .coveragerc
 include tox.ini
 
-recursive-include docs Makefile make.bat *.py *.rst
+recursive-include docs Makefile make.bat *.py *.rst *.empty
 recursive-include tests *.py
