--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,20 +7,56 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\.appveyor\\run_with_env.cmd"
 
   matrix:
-    - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.8"
+    - PYTHON: "C:\\Python26"
+      PYTHON_VERSION: "2.6.9"
       PYTHON_ARCH: "32"
       TOXENV: "py27"
 
+    - PYTHON: "C:\\Python26"
+      PYTHON_VERSION: "2.6.9"
+      PYTHON_ARCH: "64"
+      TOXENV: "py27"
+
+    - PYTHON: "C:\\Python27"
+      PYTHON_VERSION: "2.7.9"
+      PYTHON_ARCH: "32"
+      TOXENV: "py27"
+
+    - PYTHON: "C:\\Python27"
+      PYTHON_VERSION: "2.7.9"
+      PYTHON_ARCH: "64"
+      TOXENV: "py27"
+
+    - PYTHON: "C:\\Python32"
+      PYTHON_VERSION: "3.2.6"
+      PYTHON_ARCH: "32"
+      TOXENV: "py32"
+
+    - PYTHON: "C:\\Python32"
+      PYTHON_VERSION: "3.2.6"
+      PYTHON_ARCH: "64"
+      TOXENV: "py32"
+
     - PYTHON: "C:\\Python33"
-      PYTHON_VERSION: "3.3.5"
+      PYTHON_VERSION: "3.3.6"
       PYTHON_ARCH: "32"
       TOXENV: "py33"
 
+    - PYTHON: "C:\\Python33"
+      PYTHON_VERSION: "3.3.6"
+      PYTHON_ARCH: "64"
+      TOXENV: "py33"
+
     - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.4.1"
+      PYTHON_VERSION: "3.4.2"
       PYTHON_ARCH: "32"
       TOXENV: "py34"
+
+    - PYTHON: "C:\\Python34"
+      PYTHON_VERSION: "3.4.2"
+      PYTHON_ARCH: "64"
+      TOXENV: "py34"
+
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
