Just use plain coverage, pytest-cov seems to have nasty side-effects if installed.

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,10 @@ deps =
     pretend
     scripttest
     pytest
-    pytest-cov
+    coverage
 commands =
-    {posargs:py.test --cov=virtualenv --cov-report=term-missing tests}
+    coverage run -m pytest {posargs}
+    coverage report -m
 
 [testenv:pypy]
 commands =
