--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,12 @@ envlist = py26,py27,pypy,py32,py33,py34,pypy3,docs,pep8,py2pep8,packaging
 
 [testenv]
 deps =
-    coverage
     pretend
+    scripttest
     pytest
+    coverage
 commands =
-    coverage run -m pytest --strict {posargs}
+    coverage run -m pytest {posargs}
     coverage report -m
 
 [testenv:py26]
@@ -24,7 +25,7 @@ basepython = {env:TOXPYTHON:python3.4}
 
 [testenv:pypy]
 commands =
-    py.test --strict {posargs}
+    {posargs:py.test tests}
 
 [testenv:docs]
 deps =
@@ -59,7 +60,16 @@ exclude = .tox,*.egg
 select = E,W,F,N
 
 [pytest]
-addopts = -r s
 markers =
     unit: this test is a fast running unit test
     functional: this test is a possibly slow running functional test
+norecursedirs =
+    .git
+    .tox
+    dist
+    build
+addopts =
+    -rxEfs
+    --strict
+    --ignore docs/conf.py
+    --ignore setup.py
