--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,18 @@ commands =
     coverage run -m pytest --strict {posargs}
     coverage report -m
 
+[testenv:py26]
+basepython = {env:TOXPYTHON:python2.6}
+
+[testenv:py27]
+basepython = {env:TOXPYTHON:python2.7}
+
+[testenv:py33]
+basepython = {env:TOXPYTHON:python3.4}
+
+[testenv:py34]
+basepython = {env:TOXPYTHON:python3.4}
+
 [testenv:pypy]
 commands =
     py.test --strict {posargs}
