--- a/tox.ini
+++ b/tox.ini
@@ -63,3 +63,16 @@ addopts =
     --ignore setup.py
     --tb short
     -vv
+
+[testenv:py26]
+basepython = {env:TOXPYTHON:python2.6}
+
+[testenv:py27]
+basepython = {env:TOXPYTHON:python2.7}
+
+[testenv:py33]
+basepython = {env:TOXPYTHON:python3.4}
+
+[testenv:py34]
+basepython = {env:TOXPYTHON:python3.4}
+
