--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     pytest
     coverage
 commands =
-    coverage run -m pytest {posargs}
+    {posargs:coverage run -m pytest}
     coverage report -m
 
 [testenv:pypy]
@@ -75,4 +75,3 @@ basepython = {env:TOXPYTHON:python3.4}
 
 [testenv:py34]
 basepython = {env:TOXPYTHON:python3.4}
-
