Switch options around so I can run whatever command I want with tox.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     pytest
     coverage
 commands =
-    coverage run -m pytest {posargs}
+    {posargs:coverage run -m pytest}
     coverage report -m
 
 [testenv:py26]
