--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
   - TOXENV=py2pep8
   - TOXENV=packaging
 
-install: pip install --upgrade tox
+install: pip install --upgrade --ignore-installed tox
 
 script: tox
 
