Drop support for Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,pypy,py32,py33,py34,pypy3,docs,pep8,py2pep8,packaging
+envlist = py27,pypy,py32,py33,py34,pypy3,docs,pep8,py2pep8,packaging
 
 [testenv]
 deps =
@@ -9,9 +9,6 @@ deps =
 commands =
     coverage run -m pytest --strict {posargs}
     coverage report -m
-
-[testenv:py26]
-basepython = {env:TOXPYTHON:python2.6}
 
 [testenv:py27]
 basepython = {env:TOXPYTHON:python2.7}
@@ -43,7 +40,7 @@ deps =
 commands = flake8 .
 
 [testenv:py2pep8]
-basepython = python2.6
+basepython = python2.7
 deps =
     flake8
     pep8-naming
