--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,11 @@ basepython = {env:TOXPYTHON:python2.6}
 [testenv:py27]
 basepython = {env:TOXPYTHON:python2.7}
 
+[testenv:py32]
+basepython = {env:TOXPYTHON:python3.2}
+
 [testenv:py33]
-basepython = {env:TOXPYTHON:python3.4}
+basepython = {env:TOXPYTHON:python3.3}
 
 [testenv:py34]
 basepython = {env:TOXPYTHON:python3.4}
