Test that the venv actually works.

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ deps =
     scripttest
     pytest
     coverage
+    nameless
 commands =
     {posargs:coverage run -m pytest}
     coverage report -m
