Add a set of envs that install the new virtualenv first.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: python
 sudo: false
 
 env:
+  - INSTALL_FIRST=yes TOXENV=py26
+  - INSTALL_FIRST=yes TOXENV=py27
+  - INSTALL_FIRST=yes TOXENV=py32
+  - INSTALL_FIRST=yes TOXENV=py33
+  - INSTALL_FIRST=yes TOXENV=py34
+  - INSTALL_FIRST=yes TOXENV=pypy
+  - INSTALL_FIRST=yes TOXENV=pypy3 
   - TOXENV=py26
   - TOXENV=py27
   - TOXENV=py32
@@ -15,6 +22,8 @@ env:
   - TOXENV=py2pep8
   - TOXENV=packaging
 
-install: pip install tox nameless
+install:
+  - if [[ $INSTALL_FIRST == yes ]]; then pip install .; fi
+  - pip install tox nameless
 
 script: tox
