Turns out latest setuptools is severely borken on Windoze. Script launchers don't work anymore :confused:

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ env:
   - TOXENV=packaging
 
 install:
-  - if [[ $INSTALL_FIRST == yes ]]; then pip install -U .; fi
-  - pip install -U tox nameless setuptools
+  - if [[ $INSTALL_FIRST == yes ]]; then pip install .; fi
+  - pip install tox nameless setuptools
 
 script: tox -v
