--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26,py27,py32,py33,py34,pypy,pypy3,docs
+    py26, py27, py32, py33, py34, py35, pypy, pypy3, docs
 
 [testenv]
 deps =
