--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,27 @@ env:
   - TOXENV=pypy3
   - TOXENV=docs
 
+matrix:
+  include:
+    - python: 2.6
+      env: TOXENV=py26
+    - python: 2.7
+      env: TOXENV=py27
+    - python: 3.2
+      env: TOXENV=py32
+    - python: 3.3
+      env: TOXENV=py33
+    - python: 3.4
+      env: TOXENV=py34
+    - python: 3.5
+      env: TOXENV=py35
+    - python: pypy
+      env: TOXENV=pypy
+    - python: pypy3
+      env: TOXENV=pypy3
+    - python: 2.7
+      env: TOXENV=docs
+
 install: pip install tox
 
 script: tox
