--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,9 @@ commands =
     python virtualenv.py {envtmpdir}/test-venv-01
 
 [testenv:docs]
-deps = sphinx
-basepython = python2.7
+deps =
+    sphinx
+    readme
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
+    python setup.py check -m -r -s
