Test more virtualenv invocations
- with no arguments
- with --python=<fullpath>
- with -p <binary>

Also test creating a {2,3}-based venv with python {3,2}

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,34 @@
 [tox]
+# env names must be a valid python  binary name, unless they have a
+# separate configuration
 envlist =
-    py26, py27, py32, py33, py34, py35, pypy, pypy3, docs
+    python{2.6,2.7,3.3,3.4,3.5}, pypy{,3}, crosspython{2,3}, docs
 
 [testenv]
 deps =
     mock
     pytest
 commands =
-    py.test []
-    python virtualenv.py {envtmpdir}/test-venv-01
+    py.test
+    python virtualenv.py {envtmpdir}/venv
+    python virtualenv.py -p {envname} {envtmpdir}/{envname}
+    python virtualenv.py --python={envpython} {envtmpdir}/{envname}-fullpath
+
+# Creating a python3 venv with a python2-based virtualenv
+[testenv:crosspython2]
+basepython=python2
+deps = 
+commands =
+    virtualenv -p python3 {envtmpdir}/{envname}
+    {envtmpdir}/{envname}/bin/python -V 2>&1 | grep "Python 3"
+
+# Creating a python2 venv with a python3-based virtualenv
+[testenv:crosspython3]
+basepython=python3
+deps = 
+commands =
+    virtualenv -p python2 {envtmpdir}/{envname}
+    {envtmpdir}/{envname}/bin/python -V 2>&1 | grep "Python 2"
 
 [testenv:docs]
 deps =
