--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,23 @@ language: python
 matrix:
   include:
     - python: 2.6
-      env: TOXENV=py26
+      env: TOXENV=python2.6
     - python: 2.7
-      env: TOXENV=py27
+      env: TOXENV=python2.7
     - python: 3.3
-      env: TOXENV=py33
+      env: TOXENV=python3.3
     - python: 3.4
-      env: TOXENV=py34
+      env: TOXENV=python3.4
     - python: 3.5
-      env: TOXENV=py35
+      env: TOXENV=python3.5
     - python: pypy
       env: TOXENV=pypy
     - python: pypy3
       env: TOXENV=pypy3
+    - python: 3.5
+      env: TOXENV=crosspython3
+    - python: 2.7
+      env: TOXENV=crosspython2
     - python: 2.7
       env: TOXENV=docs
 
