--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,19 @@
+environment:
+  matrix:
+    - PYTHON: "C:\\Python26"
+    - PYTHON: "C:\\Python27"
+    - PYTHON: "C:\\Python33"
+    - PYTHON: "C:\\Python34"
+    - PYTHON: "C:\\Python35"
+    - PYTHON: "C:\\Python26-x64"
+    - PYTHON: "C:\\Python27-x64"
+    - PYTHON: "C:\\Python33-x64"
+    - PYTHON: "C:\\Python34-x64"
+    - PYTHON: "C:\\Python35-x64"
+    
 install:
-  - cmd: python -m pip install tox
-
+  - "%PYTHON%\\python.exe -m pip install tox"
 build_script:
-  - cmd: python --version
-  - cmd: python -m tox
+  - "%PYTHON%\\python.exe --version"
+test_script:
+  - "%PYTHON%\\python.exe -m tox"
