appveyor.yml Make tox test only current Python env
See https://tox.readthedocs.org/en/latest/example/basic.html#a-simple-tox-ini-default-environments

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,4 +16,4 @@ install:
 build_script:
   - "%PYTHON%\\python.exe --version"
 test_script:
-  - "%PYTHON%\\python.exe -m tox"
+  - "%PYTHON%\\python.exe -m tox -e"
