--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,4 +16,4 @@ install:
 build_script:
   - "%PYTHON%\\python.exe --version"
 test_script:
-  - "%PYTHON%\\python.exe -m tox -e py"
+  - "%PYTHON%\\Scripts\\tox -e py"
