appveyor.yml List tox environments

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,4 +16,5 @@ install:
 build_script:
   - "%PYTHON%\\python.exe --version"
 test_script:
+  - "%PYTHON%\\Scripts\\tox --listenvs"
   - "%PYTHON%\\Scripts\\tox -e py"
