--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,11 @@ install:
             PYPY_VERSION="pypy3.3-v5.2.0-alpha1-linux64"
             ;;
         esac
-        pushd "$PYPY_VERSION" && patch -i "$TRAVIS_BUILD_DIR/external/$TOXENV-subprocess.patch" -N -p0 -F0 && popd
-        virtualenv --python="$HOME/pypy/$PYPY_VERSION/bin/python" "$HOME/virtualenvs/$PYPY_VERSION"
-        source "$HOME/virtualenvs/$PYPY_VERSION/bin/activate"
+        if [ -n "$PYPY_VERSION" ] ; then
+            pushd "$PYPY_VERSION" && patch -i "$TRAVIS_BUILD_DIR/external/$TOXENV-subprocess.patch" -N -p0 -F0 && popd
+            virtualenv --python="$HOME/pypy/$PYPY_VERSION/bin/python" "$HOME/virtualenvs/$PYPY_VERSION"
+            source "$HOME/virtualenvs/$PYPY_VERSION/bin/activate"
+        fi
     - pip install tox
 
 script: tox
