Restore changes in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,3 +49,16 @@ install:
 script: tox
 
 sudo: false # Use container based builds
+
+branches:
+  only:
+    - master
+    - develop
+    - rewrite
+
+notifications:
+  irc:
+    channels:
+      - "irc.freenode.org#pypa-dev"
+    use_notice: true
+    skip_join: true
