add test for activation failure
Covers case where activate may fail due
to unbound variables, like PS1

Change-Id: Ib10d364d9a273429ab7bce22aa5201571aecb349

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ deps =
     pytest
 commands =
     py.test
+whitelist_externals =
+    bash
 
 # Creating a python3 venv with a python2-based virtualenv
 [testenv:crosspython2]
@@ -17,6 +19,8 @@ basepython=python2
 deps =
 commands =
     virtualenv -p python3 {envtmpdir}/{envname}
+    # test that activate does not fail
+    bash -c "set -euxo pipefail; source {envtmpdir}/{envname}/bin/activate"
     {envtmpdir}/{envname}/bin/python -V 2>&1 | grep "Python 3"
 
 # Creating a python2 venv with a python3-based virtualenv
@@ -25,6 +29,8 @@ basepython=python3
 deps =
 commands =
     virtualenv -p python2 {envtmpdir}/{envname}
+    # test that activate does not fail
+    bash -c "set -euxo pipefail; source {envtmpdir}/{envname}/bin/activate"
     {envtmpdir}/{envname}/bin/python -V 2>&1 | grep "Python 2"
 
 [testenv:docs]
