Avoid activate failure with unbound variables
When shell (bash or compatible) is run in strict mode, activate can
fail due to unbound variabled.

Includes alternative sed call that is cross GNU/BSD compatible.

Fixes  #1029

Change-Id: I764297341dee69a01bd4044d6567dee1026499d2

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,14 @@ deps =
     mock
     pytest
 commands =
+    # assure that the script was rebuild *before* commit
+    {toxinidir}/bin/rebuild-script.py
+    # this should fail if there are uncommited local changes
+    git diff-index --quiet --cached HEAD --
+    {toxinidir}/tests/test_activate.sh
     py.test
+whitelist_externals =
+    git
 
 # Creating a python3 venv with a python2-based virtualenv
 [testenv:crosspython2]
@@ -17,6 +24,7 @@ basepython=python2
 deps =
 commands =
     virtualenv -p python3 {envtmpdir}/{envname}
+    ./tests/test_activate.sh
     {envtmpdir}/{envname}/bin/python -V 2>&1 | grep "Python 3"
 
 # Creating a python2 venv with a python3-based virtualenv
@@ -24,6 +32,7 @@ commands =
 basepython=python3
 deps =
 commands =
+    ./tests/test_activate.sh
     virtualenv -p python2 {envtmpdir}/{envname}
     {envtmpdir}/{envname}/bin/python -V 2>&1 | grep "Python 2"
 
