--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,18 @@
+sudo: false # Use container based builds
+# sudo: true
+# sudo is required for installing extra tools like alternative shells
 language: python
-
+# https://docs.travis-ci.com/user/installing-dependencies/
+addons:
+  apt:
+    sources:
+    - sourceline: 'ppa:fish-shell/release-2'
+    - sourceline: 'deb [arch=amd64] https://packages.microsoft.com/ubuntu/14.04/prod trusty main'
+      key_url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    packages:
+    - fish
+    - powershell
+    - tcsh
 matrix:
   include:
     # Based on https://docs.python.org/devguide/#status-of-python-branches
@@ -22,11 +35,11 @@ matrix:
     - python: 2.7
       env: TOXENV=docs
 
-install: pip install tox
+install:
+ # - ./tests/install-test-deps.sh
+ - pip install tox
 
 script: tox
-
-sudo: false # Use container based builds
 
 branches:
   only:
