--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,25 @@
+# packaging
 virtualenv.egg-info
 build
 dist
-docs/_build
-.DS_Store
-*.py[cod]
 *.egg
 .eggs
+
+# documentation
+docs/_build
+
+# python
+*.py[cod]
+
+# tools
 .tox
-.cache
+.*_cache
+.DS_Store
+
+# tbd
 /tests/test_activate_output.actual
 /tests/test_activate_output.expected
+
+# IDE
+.idea
+.vscode
