add coverage and timeout to tests

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,34 @@ envlist = py{27,34,35,36,37}, pypy{,3}, cross_python{2,3}, docs, package_readme
 
 [testenv]
 description = run tests with {basepython}
+setenv = PIP_DISABLE_VERSION_CHECK = 1
+         COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
 deps = mock
-       pytest
-commands = pytest
+       pytest >= 3.0.0, <4
+       pytest-cov >= 2.5.1, <3
+       pytest-mock >= 1.10.0, <2
+       pytest-timeout >= 1.3.0, <2
+commands = pytest {posargs:\
+           --cov="virtualenv" \
+           --cov-config="{toxinidir}/tox.ini"  \
+           --timeout=180 \
+           --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
+           . }
+
+[coverage:run]
+branch = true
+
+[coverage:report]
+skip_covered = True
+show_missing = True
+
+[coverage:paths]
+source = virtualenv
+         .tox/*/lib/python*/site-packages/virtualenv
+         .tox/pypy*/site-packages/virtualenv
+         .tox\*\Lib\site-packages\virtualenv
+         */virtualenv
+         *\virtualenv
 
 [testenv:cross_python2]
 description = test creating a python3 venv with a python2-based virtualenv
