add pyproject.toml and isolated tox build

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 minversion = 3.3.0
 envlist = py{27,34,35,36,37}, pypy{,3}, cross_python{2,3}, docs, package_readme
+isolated_build = true
+skip_missing_interpreters = true
 
 [testenv]
 description = run tests with {basepython}
