--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.3.0
-envlist = embed, py{27,34,35,36,37}, pypy{,3}, cross_python{2,3}, docs, package_readme
+envlist = fix_lint, embed, py{27,34,35,36,37}, pypy{,3}, cross_python{2,3}, docs, package_readme
 isolated_build = true
 skip_missing_interpreters = true
 
@@ -91,3 +91,28 @@ skip_install = true
 deps =
 commands = python {toxinidir}/bin/rebuild-script.py
 
+[testenv:fix_lint]
+description = format the code base to adhere to our styles, and complain about what we cannot do automatically
+basepython = python3.7
+passenv = HOMEPATH
+          PROGRAMDATA
+deps = pre-commit == 1.12.0
+skip_install = True
+commands = pre-commit run --all-files --show-diff-on-failure
+           python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+line_length = 120
+known_first_party = tox,tests
+known_third_party = __builtin__,_winreg,mock,pytest,sets,setuptools,sitecustomize,sphinx_rtd_theme,urlparse,usercustomize,winreg
+
+[flake8]
+max-complexity = 22
+max-line-length = 120
+ignore = E203, W503, C901
+
+[pep8]
+max-line-length = 120
