move CI to Azure Pipelines

--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,22 @@ source = virtualenv
          */virtualenv
          *\virtualenv
 
+[testenv:coverage]
+description = [run locally after tests]: combine coverage data and create report;
+              generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
+deps = {[testenv]deps}
+       coverage >= 4.4.1, < 5
+       diff_cover
+skip_install = True
+passenv = DIFF_AGAINST
+setenv = COVERAGE_FILE={toxworkdir}/.coverage
+commands = coverage erase
+           coverage combine
+           coverage report -m
+           coverage xml -o {toxworkdir}/coverage.xml
+           coverage html -d {toxworkdir}/htmlcov
+           diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+
 [testenv:cross_python2]
 description = test creating a python3 venv with a python2-based virtualenv
 basepython = python2
