--- a/tox.ini
+++ b/tox.ini
@@ -14,26 +14,29 @@ deps = mock
        pytest-mock >= 1.10.0, <2
        pytest-timeout >= 1.3.0, <2
 commands = pytest {posargs:\
-           --cov="virtualenv" \
+           --cov=virtualenv \
            --cov-config="{toxinidir}/tox.ini"  \
            --timeout=180 \
            --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
            . }
 
+[testenv:.package]
+deps =
+
 [coverage:run]
-branch = true
+branch = false
 
 [coverage:report]
 skip_covered = True
 show_missing = True
 
 [coverage:paths]
-source = virtualenv
-         .tox/*/lib/python*/site-packages/virtualenv
-         .tox/pypy*/site-packages/virtualenv
-         .tox\*\Lib\site-packages\virtualenv
-         */virtualenv
-         *\virtualenv
+source = src
+         .tox/*/lib/python*/site-packages
+         .tox/pypy*/site-packages
+         .tox\*\Lib\site-packages
+         */virtualenv.py
+         *\virtualenv.py
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
