--- a/tox.ini
+++ b/tox.ini
@@ -112,7 +112,8 @@ known_third_party = __builtin__,_winreg,mock,pytest,sets,setuptools,sitecustomiz
 [flake8]
 max-complexity = 22
 max-line-length = 120
-ignore = E203, W503, C901
+ignore = E203, W503, C901, E402
+exclude = virtualenv_embedded/site.py
 
 [pep8]
 max-line-length = 120
