add embed tox env

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.3.0
-envlist = py{27,34,35,36,37}, pypy{,3}, cross_python{2,3}, docs, package_readme
+envlist = embed, py{27,34,35,36,37}, pypy{,3}, cross_python{2,3}, docs, package_readme
 isolated_build = true
 skip_missing_interpreters = true
 
@@ -84,3 +84,10 @@ skip_install = true
 extras =
 commands = pip wheel -w {envtmpdir}/build --no-deps .
            twine check {envtmpdir}/build/*
+
+[testenv:embed]
+description = embed dependencies into virtualenv.py
+skip_install = true
+deps =
+commands = python {toxinidir}/bin/rebuild-script.py
+
