--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ trigger:
 
 jobs:
 - template: azure-run-tox-env.yml
+  parameters: {tox: embed, python: 3.7}
+- template: azure-run-tox-env.yml
   parameters: {tox: docs, python: 3.7}
 - template: azure-run-tox-env.yml
   parameters: {tox: package_readme, python: 3.7}
