fix flake8 errors

--- a/tox.ini
+++ b/tox.ini
@@ -94,8 +94,7 @@ commands = python {toxinidir}/bin/rebuild-script.py
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 basepython = python3.7
-passenv = HOMEPATH
-          PROGRAMDATA
+passenv = HOMEPATH PROGRAMDATA http_proxy https_proxy no_proxy
 deps = pre-commit == 1.12.0
 skip_install = True
 commands = pre-commit run --all-files --show-diff-on-failure
@@ -106,7 +105,7 @@ multi_line_output = 3
 include_trailing_comma = True
 force_grid_wrap = 0
 line_length = 120
-known_first_party = tox,tests
+known_first_party = virtualenv
 known_third_party = __builtin__,_winreg,mock,pytest,sets,setuptools,sitecustomize,sphinx_rtd_theme,urlparse,usercustomize,winreg
 
 [flake8]
