--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     rev: v1.2.0
     hooks:
     -   id: seed-isort-config
-        args: [--application-directories, "src:."]
+        args: [--application-directories, "src:tests:virtualenv_embedded"]
 -   repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.4
     hooks:
@@ -27,8 +27,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: debug-statements
+    -   id: check-merge-conflict
+    -   id: trailing-whitespace
+    -   id: check-docstring-first
     -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 18.2.0"]
+        additional_dependencies: ["flake8-bugbear == 18.8.0"]
         language_version: python3.7
 -   repo: https://github.com/asottile/pyupgrade
     rev: v1.9.1
