workaround ConfigParser bug

--- a/tox.ini
+++ b/tox.ini
@@ -105,6 +105,7 @@ multi_line_output = 3
 include_trailing_comma = True
 force_grid_wrap = 0
 line_length = 120
+known_standard_library = ConfigParser
 known_first_party = virtualenv
 known_third_party = __builtin__,_winreg,mock,pytest,sets,setuptools,sitecustomize,sphinx_rtd_theme,urlparse,usercustomize,winreg
 
