--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,8 +11,8 @@ repos:
     -   id: blacken-docs
         additional_dependencies: [black==18.9b0]
         language_version: python3.7
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v1.2.0
+-   repo: https://github.com/gaborbernat/seed-isort-config
+    rev: master
     hooks:
     -   id: seed-isort-config
         args: [--application-directories, "src:tests:virtualenv_embedded"]
